--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,9 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-devtools')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	runtime('org.postgresql:postgresql')
+
+	compile('org.xerial:sqlite-jdbc:3.8.9.1')
+
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
 
