--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 
 # IntelliJ
 /out/
+/build/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -42,3 +43,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# WTF
+projektsmog.iml
+SmogProject.iml
+.idea/modules.xml
